Rectified Aligning issues and Modified Picture Mode

--- a/jackpot.css
+++ b/jackpot.css
@@ -44,7 +44,6 @@ h1,h2{
 	border-width:1.5px;
 	border-radius:2px;
 	border-color: #000000;
-	height: 5vh;
 	border-color: black;
 	border-style: solid;
 	font-family: 'PT Sans', sans-serif;
@@ -74,7 +73,7 @@ margin-left:10vw;}
 }
 .box p{
 	position: relative;
-	bottom: 15vh;
+	bottom: 80%;
 }
 .button{
 	padding:1vh 0.25vw 1vh 0.25vw;
