--- a/spider.css
+++ b/spider.css
@@ -44,7 +44,6 @@ body {
 	line-height: 1.2em;
 	letter-spacing: 0.2em;
 	float: left;
-	clear: both;
 }
 #headr h1{
 	text-align:center;
@@ -198,6 +197,3 @@ vertical-align: middle;
 	font-weight: bold;
 	margin: 0px;
 }
-@media only screen and (max-width: 768px) {
-}
-
